--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>My Landing Page</title>
 </head>
 <body>
-    
+    <div id="hero-banner">
+        <div id="top-bar">
+            <div id="header-logo">Header Logo</div>
+            <div class="header-links">
+                <div id="header-link-one">header link one</div>
+                <div id="header-link-two">header link two</div>
+                <div id="header-link-three">header link three</div>
+            </div>
+        </div>
+        <div id="hero-main">
+            <div id="hero-motto">
+                <h1>This website is awesome!</h1>
+                <p>
+                    This website has some subtext that goes here under the main title.
+                    It's a smaller font and the color is lower contrast.
+                </p>
+                <button>Sign Up</button>
+            </div>
+            <div id="hero-image">this is a placeholder for an image</div>
+        </div>
+    </div>
+    <div id="info-box">
+        <div id="info-header">Some random information.</div>
+        <div class="info-images">
+            <div id="info-image-one"><p>This is some subtext under an illustration or image.</p></div>
+            <div id="info-image-two"><p>This is some subtext under an illustration or image.</p></div>
+            <div id="info-image-three"><p>This is some subtext under an illustration or image.</p></div>
+            <div id="info-image-four"><p>This is some subtext under an illustration or image.</p></div>
+        </div>
+    </div>
+    <div id="quote-box">
+        <div id="quote-text">
+            <p>
+                This is an inspiring quote, or a testimonial
+                from a customer. Maybe it's just filling up
+                space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.
+            </p>
+        </div>
+        <div id="quote-attributor">-Thor, God of Thunder.</div>
+    </div>
+    <div id="signup-box">
+        <div id="signup-text">
+            <span id="first-line">Call to action! It's time!</span>
+            Sign up for our product by clicking that button
+            right over there!
+        </div>
+        <div id="signup-button">
+            <button>Sign up</button>
+        </div>
+    </div>
+    <footer></footer>
 </body>
 </html>
