--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div id="info-box">
-        <div id="info-header">Some random information.</div>
+        <div id="info-header"><h2>Some random information.</h2></div>
         <div class="info-images">
             <div id="info-image-one"><p>This is some subtext under an illustration or image.</p></div>
             <div id="info-image-two"><p>This is some subtext under an illustration or image.</p></div>
