finish main page

--- a/index.html
+++ b/index.html
@@ -28,16 +28,28 @@
                 </p>
                 <button>Sign Up</button>
             </div>
-            <div id="hero-image">this is a placeholder for an image</div>
+            <div id="hero-image"><span>this is a placeholder for an image</span></div>
         </div>
     </div>
     <div id="info-box">
         <div id="info-header"><h2>Some random information.</h2></div>
         <div class="info-images">
-            <div id="info-image-one"><p>This is some subtext under an illustration or image.</p></div>
-            <div id="info-image-two"><p>This is some subtext under an illustration or image.</p></div>
-            <div id="info-image-three"><p>This is some subtext under an illustration or image.</p></div>
-            <div id="info-image-four"><p>This is some subtext under an illustration or image.</p></div>
+            <figure>
+                <img>
+                <figcaption>this is some subtext under an illustration or an image</figcaption>
+            </figure>
+            <figure>
+                <img>
+                <figcaption>this is some subtext under an illustration or an image</figcaption>
+            </figure>
+            <figure>
+                <img>
+                <figcaption>this is some subtext under an illustration or an image</figcaption>
+            </figure>
+            <figure>    
+                <img>
+                <figcaption>this is some subtext under an illustration or an image</figcaption>
+            </figure>
         </div>
     </div>
     <div id="quote-box">
@@ -49,18 +61,22 @@
                 Who knows? All I know is that it looks nice.
             </p>
         </div>
-        <div id="quote-attributor">-Thor, God of Thunder.</div>
+        <div id="quote-attributor">-Thor, God of Thunder</div>
     </div>
-    <div id="signup-box">
-        <div id="signup-text">
-            <span id="first-line">Call to action! It's time!</span>
-            Sign up for our product by clicking that button
-            right over there!
-        </div>
-        <div id="signup-button">
-            <button>Sign up</button>
+    <div id="last-box-wrapper">
+        <div id="signup-box">        
+            <div id="signup-text">
+                <div id="first-line">Call to action! It's time!</div>
+                <div id="#signup-instruct">Sign up for our product by clicking that button
+                right over there!</div>
+            </div>
+            <div id="signup-button">
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
-    <footer></footer>
+    <footer>
+        <p>Copyright &copy The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
